--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>어썸한 메모~!</title>
   </head>
   <body>
-    <form  id="memo-form">
+    <form id="memo-form">
       <label for="memo-input">메모를 입력 해주세요</label>
       <input
         type="text"
@@ -16,6 +16,8 @@
       />
       <button id="memo-submit" type="submit">생성</button>
     </form>
+
+    <ul id="memo-ul"></ul>
     <script src="app.js"></script>
   </body>
 </html>
