메모 삭제기능

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <title>어썸한 메모~!</title>
   </head>
   <body>
+    <h1>배포가 이렇게 쉽다고?</h1>
     <form id="memo-form">
       <label for="memo-input">메모를 입력 해주세요</label>
       <input
